--- a/android/src/main/res/drawable/skip_button.xml
+++ b/android/src/main/res/drawable/skip_button.xml
@@ -1,6 +1,29 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_pressed="true"
-        android:textColor="@android:color/black">
+    <item android:state_pressed="true">
+        <shape
+            android:shape="rectangle">
+            <corners
+                android:bottomLeftRadius="19dp"
+                android:bottomRightRadius="19dp"
+                android:topLeftRadius="19dp"
+                android:topRightRadius="19dp" />
+
+            <solid android:color="@color/connect_black_color"/>
+        </shape>
+    </item>
+    <item android:state_focused="true">
+        <shape
+            android:shape="rectangle">
+            <corners
+                android:bottomLeftRadius="19dp"
+                android:bottomRightRadius="19dp"
+                android:topLeftRadius="19dp"
+                android:topRightRadius="19dp" />
+
+            <solid android:color="@color/connect_black_color"/>
+        </shape>
+    </item>
+    <item>
         <shape
             android:shape="rectangle">
             <stroke android:width="1dp" android:color="@android:color/darker_gray" />
@@ -12,31 +35,6 @@
 
             <solid android:color="@android:color/white"/>
         </shape>
-    </item>
-    <item android:state_focused="true"
-        android:textColor="@android:color/black">
-        <shape
-            android:shape="rectangle">
-            <stroke android:width="1dp" android:color="@android:color/darker_gray" />
-            <corners
-                android:bottomLeftRadius="19dp"
-                android:bottomRightRadius="19dp"
-                android:topLeftRadius="19dp"
-                android:topRightRadius="19dp" />
 
-            <solid android:color="@android:color/white"/>
-        </shape>
-    </item>
-    <item android:textColor="@android:color/white">
-        <shape
-            android:shape="rectangle">
-            <corners
-                android:bottomLeftRadius="19dp"
-                android:bottomRightRadius="19dp"
-                android:topLeftRadius="19dp"
-                android:topRightRadius="19dp" />
-
-            <solid android:color="@android:color/black"/>
-        </shape>
     </item>
 </selector>
